--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -51,23 +51,14 @@
         <th>설명</th>
         <td th:text="${product.productDescription}"></td>
     </tr>
-<<<<<<< HEAD
     <tr>
         <th>상품작성자</th>
-        <td th:text="${product.member.memberNickName}"></td>
+        <td th:text="${product.memberNickName}"></td>
     </tr>
-=======
-<!--    <tr>-->
-<!--        <th>상품작성자</th>-->
-<!--        <td th:text="${product.productWriter}"></td>-->
-<!--    </tr>-->
->>>>>>> 668271f95af554bf331429f65ea5a3866184c3bc
-    <!-- 송원철 -->
     <tr>
         <th>상품가격</th>
         <td th:text="${product.productPrice}"></td>
     </tr>
-    <!------------->
 </table>
 <!-- 송원철 -->
 </script>
