--- a/src/main/resources/templates/notice/write.html
+++ b/src/main/resources/templates/notice/write.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <title>공지사항 작성</title>
     <link rel="stylesheet" th:href="@{/css/notice/write.css}">
+    <script th:src="@{/js/notice/write.js}" defer="defer"></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
     <div class="container">
         <div class="write">
             <div class="write-con">
-                <form th:action="@{/notice/write}" method="post" accept-charset="utf-8" th:object="${noticeDto}">
-                    <div class="write-form">
-                        <h1>공지사항 작성</h1>
+                <div class="title">
+                    <h1>공지사항 작성</h1>
+                </div>
+                <div class="write-form">
+                    <form th:action="@{/notice/write}" method="post" accept-charset="utf-8" th:object="${noticeDto}">
                         <ul>
                             <li>
+                                <label>구분</label>
                                 <select name="Type" id="notType" th:field="*{notType}">
-                                    <option th:value="''" disabled>===종류 선택===</option>
+                                    <option th:value="''"> ----- 선택하세요 ----- </option>
                                     <option th:value="'product'">상품</option>
                                     <option th:value="'delivery'">배송</option>
                                     <option th:value="'holiday'">공휴일</option>
@@ -24,6 +28,7 @@
                                 </select>
                             </li>
                             <li>
+                                <label>작성자</label>
                                 <select name="Writer" id="noticeWriter" th:field="*{notWriter}">
                                     <option th:value="''" disabled>===작성자 선택===</option>
                                     <option th:value="'admin'">관리자</option>
@@ -33,20 +38,26 @@
                                 <label th:for="title">제목</label>
                                 <input type="text" th:field="*{noticeTitle}" placeholder="제목을 입력하세요.">
                             </li>
-                            <li>
-                                <label th:for="content">내용</label>
-                                <textarea rows="20" th:field="*{noticeContent}" placeholder="공지사항을 작성하세요" class="content"></textarea>
-                            </li>
-                            <li>
-                                <input type="submit" value="작성">
-                                <input type="reset" value="취소">
+                            <li class="contentLi">
+                                <div class="content">
+                                    <label th:for="content" class="contentLabel">내용</label>
+                                </div>
+                                <textarea th:field="*{noticeContent}" placeholder="공지사항을 작성하세요" id="contentText"></textarea>
                             </li>
                         </ul>
-                    </div>
-                </form>
-
+                        <ul>
+                            <li class="Btn">
+                                <div class="button">
+                                    <input type="submit" value="작성">
+                                    <input type="reset" value="취소">
+                                </div>
+                            </li>
+                        </ul>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
