--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,14 +20,18 @@
         <div class="top">
             <div class="topBtn">
                 <a href="#header">
-                    <div class="moveBtnTop">↑</div>
+                    <div class="moveBtnTop">
+                        <img th:src="@{/images/uparrow.png}" alt="up" class="img">
+                    </div>
                 </a>
             </div>
          </div>
          <div class="bottom">
             <div class="bottomBtn">
                 <a href="#footer">
-                    <div class="moveBtnBotton">↓</div>
+                    <div class="moveBtnBotton">
+                        <img th:src="@{/images/downarrow.png}" alt="down" class="img">
+                    </div>
                 </a>
                 
             </div>
