--- a/src/main/resources/templates/member/cart.html
+++ b/src/main/resources/templates/member/cart.html
@@ -16,7 +16,7 @@
 </th:block>
 <th:block layout:fragment="container">
     <h1 class="title"><span th:text="${member.memberNickName}" ></span>님 장바구니</h1>
-    <h1 class="title1"><span th:text="${member.memberId}">회원번호</span></h1>
+    <h1 class="title1"><span th:text="${member.memberId}"></span>회원번호</h1>
     <div class="contianer">
         <div class="main">
             <table class="cartTable">
