--- a/src/main/resources/templates/semiMember/cart.html
+++ b/src/main/resources/templates/semiMember/cart.html
@@ -25,20 +25,23 @@
         <tbody>
         <tr th:each="cartItem, i: ${cartItems}">
             <td th:text="${i.count}">1</td>
-            <td th:text="${cartItem.getProduct().getId()}">3번상품</td>
+            <td th:text="${cartItem.getProduct().getId()}">상품ID</td>
             <td>
                 <th:block th:each="img : ${productImages}">
                     <!-- 상품 ID에 해당하는 이미지만 출력 -->
                     <th:block th:if="${cartItem.getProduct().getId()} == ${img.id}">
+                        <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}"> <!-- 상세보기 페이지로 이동-->
                         <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="50"/>
                     </th:block>
                 </th:block>
             </td>
-            <td th:text="${cartItem.getProduct().getProductName()}">상품명</td>
+            <td>
+                <a th:href="@{/product/{id}(id=${cartItem.getProduct().getId()})}" th:text="${cartItem.getProduct().getProductName()}">상품명</a>
+            </td>
             <td th:text="${cartItem.getCartItemCount()}">수량</td>
             <td th:text="${cartItem.getProduct().getProductPrice() * cartItem.getCartItemCount()}">가격</td>
             <td th:text="${cartItem.getCart().getCreateTime()}">날짜</td>
-            <td class="btn btn-outline-dark"><a th:href="@{/cart/semiMember/{semiMemberId}/{cartItemId}/delete(semiMemberId=${cartItem.getCart().getSemiMember().getSemiMemberId}, cartItemId=${cartItem.getCartItemId()})}" style="text-decoration: none">삭제</a></td>
+            <td class="btn btn-outline-dark"><a th:href="@{/cart/semiMember/{semiMemberId}/{cartItemId}/delete(semiMemberId=${cartItem.getCart().getSemiMember().getSemiMemberId()}, cartItemId=${cartItem.getCartItemId()})}" style="text-decoration: none">삭제</a></td>
         </tr>
         </tbody>
     </table>
