inquiry write, notice update 디자인

--- a/src/main/resources/static/css/inquiry/write.css
+++ b/src/main/resources/static/css/inquiry/write.css
@@ -1,61 +1,171 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
-
+/* container */
 .container{
     width: 100%;
 }
 .container .write{
     width: 100%;
     height: auto;
-    /* display: flex; */
-    /* justify-content: start; */
-    gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
 }
 .container .write .write-con{
-    flex-basis: 1600px;
-    height: calc( 100vh - 64px - 200px - 30px);
-    background-color: aliceblue;
-    /* display: flex; */
-    /* justify-content: start; */
-    gap: 10px;
-    /* align-items: center; */
-}
-.conatainer .write .write-con .write-form{
-    /* flex-basis: 600px; */
-    background-color: #7286D3;
-    padding: 20px;
-    box-sizing: border-box;
-    border-radius: 25%;
-}
-.conatainer .write .write-con .write-form ul{
-    /* display: flex; */
-    /* justify-content: space-between; */
+    flex-basis: 1000px;
+    display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: space-between;
+    text-align: center;
+    box-sizing: border-box;
+    gap: 30px;
 }
-.conatainer .write .write-con .write-form ul>li{
-    /* display: flex; */
-    /* justify-content: space-between; */
+/* title */
+.container .write .write-con .title{
+    padding: 20px;
     gap: 10px;
-    border-radius: 30%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid #7285d3a4;
+}
+/* 작성 form */
+.container .write .write-con .write-form{
     padding: 10px;
     box-sizing: border-box;
-    color: inherit;
-}   
-.conatainer .write .write-con .write-form ul>li label{
-    flex: 1;
-    color: inherit;
+    justify-content: center;
 }
-.content{
-    width: 100%;
-    gap: 10px;
-    padding: 10px;
+.container .write .write-con .write-form form{
+    margin: auto;
+    text-align: center;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
     box-sizing: border-box;
-    resize:  none;
+}
+.container .write .write-con .write-form form>ul{
+    width: inherit;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+/* Btn과 내용 제외 li */
+.container .write .write-con .write-form form>ul>li:not(.Btn):not(.contentLi){
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    text-align: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+/* 내용의 label제외 */
+.container .write .write-con .write-form form>ul>li label:not(.contentLabel){
+    width: 120px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    gap: 5px;
+}
+/* 내용li */
+.container .write .write-con .write-form form>ul>li.contentLi{
+    width: 900px;
+    display: flex;
+    justify-content: start;
+    margin-bottom: 15px;
+    /* text-align: center;
+    align-items: center; */
+    box-sizing: border-box;
+}
+/* 내용 label을 감싸는 div */
+.container .write .write-con .write-form form>ul>li .content{
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+}
+.container .write .write-con .write-form form>ul>li .content label{
+    width: 120px;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.container .write .write-con .write-form form>ul>li.contentLi textarea{
+    width: 780px;
+    height: 300px;
+    padding: 10px;
+    box-shadow: inset 0px -2px 4px -1px #8c9cdb;
+    border: none;
+}
+.container .write .write-con .write-form form>ul>li:not(.Btn) input{
+    width: 780px;
+    height: 20px; 
+    padding: 10px;
+    box-shadow: inset 0px -2px 4px -1px #8c9cdb;
+    border: none;
+}
+/* select */
+.container .write .write-con .write-form form>ul>li select{
+    width: 780px;
+    height: 30px;
+    /* appearance: none;
+    box-shadow: inset 0px -2px 4px -1px #8c9cdb;
+    border: none; */
+}
+.container .write .write-con .write-form form>ul>li select:focus {
+    border: 1px solid #8c9cdb;
     outline: none;
 }
-.conatainer .write .write-con .write-form ul>li input{
-    flex: 3;
-    color: inherit;
+.container .write .write-con .write-form form>ul>li.Btn{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* border: 2px solid yellow; */
+}
+.container .write .write-con .write-form form>ul>li.Btn .button{
+    width: 200px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    box-sizing: border-box;
+    /* border: 2px solid red; */
+}
+.container .write .write-con .write-form form>ul>li.Btn .button input{
+    width: 150px;
+    height: 30px;
+    display: flex;
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #8C9CDB;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 0.3s;
+    background: transparent;
+}
+.container .write .write-con .write-form form>ul>li.Btn .button input:hover{
+    background-color: #DADFF3;
+    color: white;
 }
