--- a/src/main/resources/templates/inquiry/write.html
+++ b/src/main/resources/templates/inquiry/write.html
@@ -4,47 +4,58 @@
     <meta charset="UTF-8">
     <title>문의사항 작성</title>
     <link rel="stylesheet" th:href="@{/css/inquiry/write.css}">
+    <script th:src="@{/js/inquiry/write.js}" defer="defer"></script>
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
     <div class="container">
         <div class="write">
             <div class="write-con">
-                <form th:action="@{/inquiry/write}" method="post" accept-charset="utf-8" th:object="${inquiryDto}">
-                    <div class="write-form">
-                        <h1>문의사항 작성</h1>
+                <div class="title">
+                    <h1>문의사항 작성</h1>
+                </div>
+                <div class="write-form">
+                 <form th:action="@{/inquiry/write}" method="post" accept-charset="utf-8" th:object="${inquiryDto}">
                         <ul>
                             <li>
+                                <label>구분</label>
                                 <select name="Type" id="inquiryType" th:field="*{inqType}">
-                                    <option th:value="''" disabled>===종류 선택===</option>
+                                    <option th:value="''"> ----- 선택하세요 ----- </option>
                                     <option th:value="'product'">상품</option>
                                     <option th:value="'delivery'">배송</option>
                                     <option th:value="'etc'">기타</option>
                                 </select>
                             </li>
                             <li>
-                                <label th:for="title">제목</label>
-                                <input type="text" th:field="*{inquiryTitle}" placeholder="제목을 입력하세요.">
-                            </li>
-                            <li>
-                                <label th:for="img">파일/label>
-                                <input type="file" name="inquiryImg" id="inquiryImg">
-                            </li>
-                            <li>
-                                <label th:for="content">내용</label>
-                                <textarea rows="20" th:field="*{inquiryContent}" placeholder="문의사항을 작성하세요" class="content"/>
-                            </li>
-                            <li>
+                                <!-- membrId 자동설정 -->
                                 <label th:for="writer">글쓴이</label>
                                 <input type="text" th:field="*{inquiryWriter}">
                             </li>
                             <li>
-                                <input type="submit" value="작성">
-                                <input type="reset" value="취소">
+                                <label th:for="title">제목</label>
+                                <input type="text" th:field="*{inquiryTitle}" placeholder="제목을 입력하세요.">
+                            </li>
+<!--                            <li>-->
+<!--                                <label th:for="img">파일/label>-->
+<!--                                <input type="file" name="inquiryImg" id="inquiryImg">-->
+<!--                            </li>-->
+                            <li class="contentLi">
+                                <div class="content">
+                                    <label th:for="content" class="contentLabel">내용</label>
+                                </div>
+                                <textarea th:field="*{inquiryContent}" placeholder="문의사항을 작성하세요" id="contentText"></textarea>
                             </li>
                         </ul>
-                    </div>
-                </form>
+                        <ul>
+                            <li class="Btn">
+                                <div class="button">
+                                    <input type="submit" value="작성">
+                                    <input type="reset" value="취소">
+                                </div>
+                            </li>
+                        </ul>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
