--- a/src/main/resources/static/css/inquiry/list.css
+++ b/src/main/resources/static/css/inquiry/list.css
@@ -1,7 +1,7 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
-/*수정수정*/
+/* inquiry list */
 .List{
     width: 100%;
     display: flex;
@@ -16,44 +16,63 @@
     flex-direction: column;
     justify-content: space-between;
 }
+/* title */
 .List .List-con .List-title{
     padding: 20px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
 }
-.List .List-con .type{
-    display: flex;
+
+/* search */
+.List .List-con .search{
+    padding: 10px 0 0 10px;
     box-sizing: border-box;
-    justify-content: space-between;
-    padding: 10px;
+    justify-content: center;
+    /* line-height: 20px; */
 }
-.List .List-con .type ul{
-    flex-basis: 1400px;
-    display: flex;
-    justify-content: space-between;
-    gap: 5px;
-    /* align-items: center; */
-}
-.List .List-con .type >ul>li{
-    width: 50px;
-    height: 50px;
-    display: flex;
-    flex: 2;
-    justify-content: space-between;
+.List .List-con .search .form{
+    margin: auto;
     text-align: center;
-    padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 20px;
+}
+.List .List-con .search form{
+    width: 700px;
+    border: 1px solid #7285d3;
+    border-radius: 10px;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    /* gap: 10px; */
     box-sizing: border-box;
-    box-shadow: 5px #cccccc;
-    align-items: center;
+    /* box-shadow: 2px #cccccc; */
 }
-.List .List-con .type >ul>li a{
-  font-size:25px;
-  font-weight:bold;
-  align-items: center;
+.List .List-con .search form .select{
+    width: 200px;
+    border-radius: 10px;
+    border: none;
+    /* padding: 1px; */
+    font-size: 15px;
+    text-align: center;
 }
+.List .List-con .search form .select:focus{
+
+}
+.List .List-con .search form .input:focus{
+    outline: none;
+}
+.List .List-con .search form .input{
+    width: 475px;
+    border: none;
+    padding: 0 0 0 10px;
+}
+.List .List-con .search form button .zoom{
+    height: 25px;
+    width: 25px;
+    object-fit: cover;
+    cursor: pointer;
+    background: transparent;
+}
+/* list table */
 table, th, td{
     border-collapse: collapse;
     border: 1px solid #A8AABC;
