--- a/src/main/resources/static/css/notice/list.css
+++ b/src/main/resources/static/css/notice/list.css
@@ -1,7 +1,7 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
-/*수정수정*/
+/* notice.list */
 .List{
     width: 100%;
     display: flex;
@@ -16,6 +16,7 @@
     flex-direction: column;
     justify-content: space-between;
 }
+/* title */
 .List .List-con .List-title{
     padding: 20px;
     box-sizing: border-box;
@@ -23,6 +24,7 @@
     justify-content: space-between;
     border-bottom: 2px solid #7285d3a4;
 }
+/* search */
 .List .List-con .search{
     padding: 10px 0 0 10px;
     box-sizing: border-box;
@@ -70,6 +72,7 @@
     cursor: pointer;
     background: transparent;
 }
+ /* type */
 .List .List-con .type{
     display: flex;
     box-sizing: border-box;
@@ -120,6 +123,7 @@
 .List .List-con .type >ul>li a:hover{
     color: white;
 }
+/* list table */
 table, th, td{
     border-collapse: collapse;
     border: 1px solid #A8AABC;
@@ -147,6 +151,7 @@ table, th, td{
 .List .List-con table tbody tr td .title{
     text-align: left;
 }
+/* page */
 .List .List-con .page{
     padding: 10px 0;
     box-sizing: borer-box;
