--- a/src/main/resources/static/css/notice/write.css
+++ b/src/main/resources/static/css/notice/write.css
@@ -64,6 +64,16 @@
     align-items: center;
     box-sizing: border-box;
 }
+/* 내용li */
+.container .write .write-con .write-form form>ul>li.contentLi{
+    width: 900px;
+    display: flex;
+    justify-content: start;
+    margin-bottom: 15px;
+    /* text-align: center;
+    align-items: center; */
+    box-sizing: border-box;
+}
 /* 내용의 label제외 */
 .container .write .write-con .write-form form>ul>li label:not(.contentLabel){
     width: 120px;
@@ -74,16 +84,6 @@
     align-items: center;
     text-align: center;
     gap: 5px;
-}
-/* 내용li */
-.container .write .write-con .write-form form>ul>li.contentLi{
-    width: 900px;
-    display: flex;
-    justify-content: start;
-    margin-bottom: 15px;
-    /* text-align: center;
-    align-items: center; */
-    box-sizing: border-box;
 }
 /* 내용 label을 감싸는 div */
 .container .write .write-con .write-form form>ul>li .content{
@@ -103,13 +103,16 @@
     text-align: center;
     align-items: center;
 }
+/* 내용 작성 textare */
 .container .write .write-con .write-form form>ul>li.contentLi textarea{
     width: 780px;
     height: 300px;
     padding: 10px;
     box-shadow: inset 0px -2px 4px -1px #8c9cdb;
     border: none;
+    resize: none;
 }
+/* button 제외 input */
 .container .write .write-con .write-form form>ul>li:not(.Btn) input{
     width: 780px;
     height: 20px; 
