--- a/src/main/resources/templates/notice/update.html
+++ b/src/main/resources/templates/notice/update.html
@@ -2,53 +2,64 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>공지사항 상세 페이지</title>
+    <title>공지사항 수정 페이지</title>
     <link rel="stylesheet" th:href="@{/css/notice/update.css}">
+   <script th:src="@{/js/notice/write.js}" defer="defer"></script>
 </head>
 <body>
-<div th:replace="~{fragments/common/kreamHeader :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="container">
     <div class="update">
         <div class="update-con">
-            <form th:action="@{/notice/update/{id}(id=${noticeDto.notId})}" method="post">
-                <div class="update-form">
-                    <h1>공지사항</h1>
+            <div class="title">
+                <h1>공지사항 수정</h1>
+            </div>
+            <div class="update-form">
+                <form th:action="@{/notice/update/{id}(id=${noticeDto.notId})}" method="post" accept-charset="utf-8">
                     <ul>
                        <li>
+                           <label>구분</label>
                            <select name="Type" id="notType" th:field="${noticeDto.notType}">
-                               <option th:value="''" disabled>===종류 선택===</option>
+                               <option th:value="''" disabled> ----- 선택하세요 ----- </option>
                                <option th:value="'product'">상품</option>
                                <option th:value="'delivery'">배송</option>
                                <option th:value="'holiday'">공휴일</option>
                                <option th:value="'event'">이벤트</option>
                            </select>
                        </li>
-                        <li>
-                            <label th:for="notId"></label>
-                            <input type="text" name="notId" th:value="${noticeDto.notId}" readonly class="readonly">
-                        </li>
-                        <li>
-                            <label th:for="notTitle">제목</label>
-                            <input type="text" name="noticeTitle" th:value="${noticeDto.noticeTitle}">
-                        </li>
-                        <li>
+                       <li>
                             <label th:for="notWriter">작성자</label>
                             <input type="text" name="notWriter" th:value="${noticeDto.notWriter}" readonly class="readonly">
                         </li>
+                        <!-- <li>
+                            <label th:for="notId"></label>
+                            <input type="hidden" name="notId" th:value="${noticeDto.notId}" readonly class="readonly">
+                        </li> -->
                         <li>
-                            <label th:for="notContent">내용</label>
-                            <textarea rows="20" type="text" id="noticeContent" th:field="${noticeDto.noticeContent}"></textarea>
+                            <label th:for="notTitle">제목</label>
+                            <input type="text" name="noticeTitle" th:value="${noticeDto.noticeTitle}" class="writeInput">
+                        </li>
+                        <li class="contentLi">
+                            <div class="content">
+                                <label th:for="content" class="contentLabel">내용</label>
+                            </div>
+                           <textarea th:text="${noticeDto.noticeContent}" th:value="${noticeDto.noticeContent}" id="contentText" class="writeInput"></textarea>
                         </li>
                         <li>
                             <label th:for="notHit">조회수</label>
                             <input type="text" name="notHit" th:value="${noticeDto.notHit}" readonly>
                         </li>
-                        <li>
-                            <input type="submit" value="수정하기">
+                    </ul>
+                    <ul>
+                        <li class="Btn">
+                            <div class="button">
+                                <input type="submit" value="작성">
+                                <input type="reset" value="취소">
+                            </div>
                         </li>
                     </ul>
-                </div>
-            </form>
+                </form>
+            </div>
             <!--댓글-->
             <div class="reply-con">
                 <div class="reply-write">
