--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -68,7 +68,7 @@
                 <th class="create">생성시간</th>
                 <th class="update">수정시간</th>
                 <th class="hit">조회수</th>
-                <th class="detail">｡◕‿◕｡</th>
+                <th class="detail">보기</th>
             </tr>
             </thead>
             <tbody>
